--- a/alatuji/Dockerfile
+++ b/alatuji/Dockerfile
@@ -2,8 +2,13 @@ FROM python:3.10.6
 
 ENV PYTHONUNBUFFERED 1
 
-
 RUN python -m pip install poetry
+
+ENV DOCKERVERSION=18.03.1-ce
+RUN curl -fsSLO https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKERVERSION}.tgz \
+  && tar xzvf docker-${DOCKERVERSION}.tgz --strip 1 \
+                 -C /usr/local/bin docker/docker \
+  && rm docker-${DOCKERVERSION}.tgz
 
 WORKDIR /alatuji
 
